--- a/ProjectOnePlace/ProjectOnePlace.csproj
+++ b/ProjectOnePlace/ProjectOnePlace.csproj
@@ -207,6 +207,9 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProjectAPIController.cs" />
+    <Compile Include="Controllers\ProjectsController.cs" />
+    <Compile Include="Controllers\ReleaseAPIController.cs" />
     <Compile Include="Controllers\ReleaseController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -262,6 +265,7 @@
     <Content Include="Service References\Application Insights\ConnectedService.json" />
     <Content Include="Views\Release\NewRequest.cshtml" />
     <Content Include="Views\Release\RequestList.cshtml" />
+    <Content Include="Views\Shared\ProjectAdd.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -277,6 +281,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OnePlace.Database.Entity\ProjectOnePlace.Database.Entity.csproj">
+      <Project>{f34a1c02-c2fd-4b31-aba1-f2e382157fce}</Project>
+      <Name>ProjectOnePlace.Database.Entity</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
