--- a/ProjectOnePlace/Web.config
+++ b/ProjectOnePlace/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ProjectOnePlace-20180321014052.mdf;Initial Catalog=aspnet-ProjectOnePlace-20180321014052;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ProjectOnePlaceEntities" connectionString="metadata=res://*/Releases.csdl|res://*/Releases.ssdl|res://*/Releases.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CDC2-L-54650LS;initial catalog=ProjectOnePlace;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
